# zephyr

./: .gitignore  MAINTAINERS.yml  west.yml
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.hc32  adc_hc32.c
drivers/can/: CMakeLists.txt  Kconfig  Kconfig.hc32  hc32_can.c  hc32_can.h
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.hc32  Kconfig.hc32f4  clock_control_hc32.c  clock_control_hc32.h  hc32f4_clock.c  hc32f4_clock.h
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.hc32_rtc  Kconfig.hc32_timer  counter_hc32_rtc.c  counter_hc32_timer6.c  counter_hc32_timera.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.hc32  dma_hc32.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.hc32  Kconfig.hc32_qspi  flash_hc32.c  flash_hc32.h  flash_hc32_qspi.c  flash_hc32_qspi.h  flash_hc32_qspi_nor.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.hc32  gpio_hc32.c  gpio_hc32.h
drivers/hwinfo/: CMakeLists.txt  Kconfig  hwinfo_hc32.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.hc32  i2c_hc32.c  i2c_hc32.h
drivers/i2s/: CMakeLists.txt  Kconfig.hc32  i2s_hc32.c  i2s_hc32.h
modules/: Kconfig  Kconfig.xhsc
soc/arm/xhsc_hc32/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  flash_config.ld
soc/arm/xhsc_hc32/common/: CMakeLists.txt  Kconfig.defconfig.series  arm_mpu_mem_cfg.h  arm_mpu_regions.c  pinctrl_soc.h
soc/arm/xhsc_hc32/hc32f4/: CMakeLists.txt  Kconfig.defconfig.hc32f460  Kconfig.defconfig.hc32f4a0  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  dts_fixup.h  linker.ld  soc.c  soc.h
submanifests/: xhsc_module.yml
(+312 files in other folders)
